# esp32-tempSnsr

./: .cproject  .gitignore  .gitmodules  .project  LICENSE  README.md  config_example.h  deepSleep.c  deepSleep.h  esp32TempSnsr.ino  nvs.csv  sdkconfig
main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/deepSleep/: deepSleep.c  deepSleep.h
main/dht/: dhtDriver.c  dhtDriver.h
main/driverDHT11Interface/: driverDHT11Interface.c  driverDHT11Interface.h
